[package]
name = "life_gamefier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.5"
dotenv = "0.15"
dialoguer = "0.11.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
